# Hackathon-II-The-Evolution-of-Todo

./: README.md
phase1/: .coverage  .mcp.json  AGENTS.md  README.md  pyproject.toml  requirements.txt
phase1/.specify/memory/: constitution.md
phase1/history/prompts/cli-foundation/: phr-001-spec-cli-foundation.md  (+6 more)
phase1/specs/001-cli-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1/src/todo_app/: __init__.py  main.py  manager.py  models.py  storage.py  validation.py
phase1/tests/integration/: test_cli_integration.py
phase1/tests/unit/: test_manager.py  test_models.py
phase2/backend/: config.py  db.py  main.py  pyproject.toml
phase2/backend/middleware/: __init__.py  jwt.py
phase2/backend/models/: __init__.py  task.py  user.py
phase2/backend/routes/: auth.py  tasks.py
phase2/backend/schemas/: auth.py
phase2/backend/tests/: __init__.py  test_jwt_middleware.py
phase2/backend/utils/: password.py
phase3/backend/: CLAUDE.md  config.py  main.py  pyproject.toml
phase3/backend/mcp/: __init__.py  schemas.py  server.py  tools.py
phase3/backend/migrations/: 000_create_users_table.sql  001_create_tasks_table.sql  002_add_conversations_table.sql  003_add_messages_table.sql  IMPLEMENTATION_SUMMARY.md  MIGRATION_SEQUENCE.md  QUICK_START.md  README.md
phase3/backend/models/: __init__.py  conversation.py  message.py
phase3/backend/routes/: __init__.py  chat.py
phase3/backend/schemas/: __init__.py  task.py
phase3/backend/services/: chat_agent.py  task_service.py
phase3/backend/utils/: __init__.py  errors.py
(+127 files in other folders)
