[project]
name = "todo-app"
version = "1.0.0"
description = "CLI Foundation - Python Todo Console App with local JSON storage"
readme = "README.md"
authors = [
    { name = "khadija-faisal", email = "khadijamughal1119@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
todo = "todo_app.main:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
